--- a/locations/templates/locations/index.html
+++ b/locations/templates/locations/index.html
@@ -1,56 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
-    {% block head %}
-    <head>
-        {% load static %}
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="Tourism Guide Application" />
-        <meta name="author" content="Shalem Janna" />
-        <title>Tourism Guide</title>
-        <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="{% static 'assets/logo2.png' %}" />
-        <!-- Bootstrap icons-->
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
-        <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="\static\css\styles.css" rel="stylesheet" />
-    </head>
-    {% endblock head %}
-    {% block navigation %}
-    <body>
-        <!-- Navigation-->
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="container px-4 px-lg-5">
-                <a class="navbar-brand" href="{% url 'placeList' %}">Tourism Guide</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
-                        {% comment %} <li class="nav-item"><a class="nav-link active" aria-current="page" href="#!">Home</a></li> {% endcomment %}
-                        <li class="nav-item"><a class="nav-link" href="{% url 'placeList' %}">Popular Sites</a></li>
-                        {% comment %} <li class="nav-item"><a class="nav-link" href="#!">About</a></li> {% endcomment %}
-                    </ul>
-                    {% block counter %}
-                    {% if request.user.is_authenticated %}
-                    <a href="{% url 'myRoute' %}">
-                        <button class="btn btn-outline-dark" href="{% url 'myRoute' %}">
-                            My sites
-                            <span class="badge bg-dark text-white ms-1 rounded-pill">{{myroutes.count}}</span>
-                        </button>
-                    </a>
-                    {% else %}
-                    {% comment %} <a href="{% url 'myRoute' %}"> {% endcomment %}
-                        <button class="btn btn-outline-dark" data-toggle="modal" data-target=".login-modal">
-                            Login
-                        </button>
-                    {% comment %} </a> {% endcomment %}
+{% block head %}
+
+<head>
+    {% load static %}
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta name="description" content="Tourism Guide Application" />
+    <meta name="author" content="Shalem Janna" />
+    <title>Tourism Guide</title>
+    <!-- Favicon-->
+    <link rel="icon" type="image/x-icon" href="{% static 'assets/logo2.png' %}" />
+    <!-- Bootstrap icons-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
+    <!-- Core theme CSS (includes Bootstrap)-->
+    <link href="\static\css\styles.css" rel="stylesheet" />
+</head>
+{% endblock head %}
+{% block navigation %}
+<body>
+    <!-- Navigation-->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container px-4 px-lg-5">
+            <a class="navbar-brand" href="{% url 'placeList' %}">Tourism Guide </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
+                    <li class="nav-item"><a class="nav-link" href="{% url 'placeList' %}">Popular Sites</a></li>
+                    {% if not request.user.is_authenticated %}
+                    <li class="nav-item"><a class="nav-link" data-bs-toggle="modal" href=""
+                            data-bs-target="#signupModal">Signup</a></li>
                     {% endif %}
-                    {% endblock counter %}
-                </div>
+                </ul>
+                {% block counter %}
+                {% if request.user.is_authenticated %}
+                <a href="{% url 'myRoute' %}">
+                    <button class="btn btn-outline-dark" href="{% url 'myRoute' %}">
+                        My sites
+                        <span class="badge bg-dark text-white ms-1 rounded-pill">{{myroutes.count}}</span>
+                    </button>
+                </a>
+                {% else %}
+                <button class="btn btn-outline-dark" data-bs-toggle="modal" data-bs-target="#loginModal">
+                    Login
+                </button>
+                {% endif %}
+                {% endblock counter %}
             </div>
-        </nav>
-        {% endblock navigation %}
-        <!-- Header-->
-        <header class="bg-dark py-5">
+        </div>
+    </nav>
+    {% endblock navigation %}
+    <!-- Header-->
+    <header class="bg-dark py-5">
             <div class="container px-4 px-lg-5 my-5">
                 <div class="text-center text-white">
                     {% block title %}
@@ -60,65 +63,89 @@
                 </div>
             </div>
         </header>
-        
-        {% block body %}
-        <!-- Section-->
-        <section class="py-5">
-            <div class="container px-4 px-lg-5 mt-5">
-                <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
-                    {% for place in places %}
-                    {% csrf_token %}
-                    <div class="col mb-5">
-                        <div class="card h-100">
-                            <!-- Product image-->
-                            {% with 'assets/'|add:place.name|add:'.jpg' as image_static %}
-                            <a href="https://www.google.com/maps/dir//{{place.coordinates}}"><img class="card-img-top"  src={% static image_static %} alt="..." /></a>
-                            {% endwith %}
-                            <!-- Product details-->
-                            <div class="card-body p-4">
-                                <div class="text-center">
-                                    <!-- Product name-->
-                                    <h5 class="fw-bolder" for="myname">{{place.name}}</h5>
-                                    <!-- Product price-->
-                                    {{place.description}}
-                                    {{place.image}}
-                                </div>
-                            </div>
-                            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                                <form action="" method="post">      
-                                {% csrf_token %}
-                                <div class="text-center"><button class="btn btn-outline-dark mt-auto" type="Submit" name="place" id="id_place" value="{{place.id}}" >Add</button></div>     
-                            </form>
+        <!-- Not loged Alert-->
+        {% if notLoged %}
+        <div class="alert alert-danger align-middle" id="alertExample" role="alert">
+            <h4 class="alert-heading"><b>Alert!</b></h4>
+            <p>In order to add sites you must first <a href="#" class="alert-link" data-bs-toggle="modal" data-bs-target="#loginModal">Login</a>.
+                If you don't have an account yet, you can create one by clicking <a href="#" class="alert-link" data-bs-toggle="modal" data-bs-target="#signupModal">Signup</a>.</p>
+          </div>
+        {% endif %}
+
+        <!-- Place add alert-->
+        {% if added %}
+        <div class="alert alert-success" role="alert" data-mdb-color="success">
+            {% for place in places %}{% if place.id == value %}
+            <i class="bi-check-circle-fill"></i> {{place.name}} has been added successfully!
+            {% endif %}{% endfor %}
+          </div>
+        {% endif %}
+    {% block body %}
+    <!-- Section-->
+    <section class="py-5">
+        <div class="container px-4 px-lg-5 mt-5">
+            <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
+                {% for place in places %}
+                {% csrf_token %}
+                <div class="col mb-5">
+                    <div class="card h-100">
+                        <!-- Product image-->
+                        {% include "locations/mapsModal.html" %}
+                        {% with 'assets/'|add:place.name|add:'.jpg' as image_static %}
+                        <a data-bs-toggle="modal" data-bs-target="#mapsModal{{place.id}}" href="" ><img class="card-img-top"
+                                src={% static image_static %} alt="{{place.name}}" /></a>
+
+                        {% endwith %}
+                        <!-- Product details-->
+                        <div class="card-body p-4">
+                            <div class="text-center">
+                                <!-- Product name-->
+                                <h5 class="fw-bolder" for="myname">{{place.name}}</h5>
+                                <!-- Product price-->
+                                {{place.description}}
+                                {{place.image}}
                             </div>
                         </div>
+                        <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                            <form action="" method="post">
+                                {% csrf_token %}
+                                <div class="text-center"><button class="btn btn-outline-dark mt-auto" type="Submit"
+                                        name="place" id="id_place" value="{{place.id}}"  >Add</button></div>
+                            </form>
+                        </div>
                     </div>
-                    {% endfor %}
                 </div>
+                {% endfor %}
             </div>
-        </section>
-        {% endblock %}
+        </div>
+    </section>
+    {% endblock %}
 
-        <!-- Footer-->
-        <footer class="py-5 bg-dark">
-            <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Tourism Guide 2022</p></div>
-            <div class="container"><a href="/logout"><p class="m-0 text-center text-white">logout</p></a></div>
+    <!-- Footer-->
+    <footer class="py-5 bg-dark">
+        <div class="container">
+            <p class="m-0 text-center text-white">Copyright &copy; Tourism Guide 2022</p>
+        </div>
+        <div class="container"><a href="/logout">
+                <p class="m-0 text-center text-white">logout</p>
+            </a></div>
 
-        </footer>
-        <!-- Bootstrap core JS-->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-        <!-- Core theme JS-->
-        <script src="\static\js\scripts.js"></script>
-    </body>
-</html>
+    </footer>
+    <!-- Bootstrap core JS-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Core theme JS-->
+    <script src="\static\js\scripts.js"></script>
+</body>
 
-<!-- Login Modal-->
-<section class="modal fade login-modal" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+<!-- Login and Singup Modal-->
 {% include "registration/login.html" %}
-</section>
-<section class="modal fade signup-modal" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
 {% include "registration/register.html" %}
-</section>
 
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script> 
+{% comment %} Scripts {% endcomment %}
+
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+    integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+    crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
+    integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+    crossorigin="anonymous"></script>
