--- a/locations/templates/locations/myRoute.html
+++ b/locations/templates/locations/myRoute.html
@@ -1,7 +1,7 @@
 {% extends "locations/index.html" %}
 {% block title %}
 <h1 class="display-4 fw-bolder">My Sites</h1>
-<p><a  target="_blank" href='https://www.google.com/maps/dir/{% for myplace in myplaces %}{{myplace.place.coordinates}}/{% endfor %}'><button class="btn btn-sm btn-outline-light mt-auto">Follow Route</button></a></p>
+<p><a  target="_blank" href='https://www.google.com/maps/dir/{% for myplace in myplaces %}{{myplace.place.name}}/{% endfor %}'><button class="btn btn-sm btn-outline-light mt-auto">Follow Route</button></a></p>
 {% endblock title %}
 
 {% block counter %}
@@ -9,7 +9,7 @@
     <button class="btn btn-outline-dark" type="submit">
         {% comment %} <i class="bi-cart-fill me-1"></i> {% endcomment %}
         My sites
-        <span class="badge bg-dark text-white ms-1 rounded-pill">{{myplaces.count}}</span>
+        <span class="badge bg-secondary text-white ms-1 rounded-pill" style="position:absolute; top:0; start:50;">{{myplaces.count}}</span>
     </button>
 </form>
 {% endblock counter %}
@@ -25,8 +25,9 @@
                         <div class="card h-100">
                             <!-- Product image-->
                             {% load static %}
+                            {% include "locations/mapsModal.html" %}
                             {% with 'assets/'|add:myplace.place.name|add:'.jpg' as image_static %}
-                            <a href="https://www.google.com/maps/dir//{{place.coordinates}}"><img class="card-img-top"  src={% static image_static %} alt="..." /></a>
+                            <img class="card-img-top" src={% static image_static %} alt="{{place.name}}" />
                             {% endwith %}
                             <!-- Product details-->
                             <div class="card-body p-4">
@@ -38,7 +39,7 @@
                                 </div>
                             </div>
                             <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                                <form action="{% url 'placeDelete' placeid=myplace.place.id %}" method="post">      
+                                <form action="{% url 'placeDelete' placeid=myplace.id %}" method="post">      
                                 {% csrf_token %}
                                 <div class="text-center"><button class="btn btn-outline-danger mt-auto" type="Submit">Delete</button></div>     
                             </form>
