--- a/users/templates/registration/login.html
+++ b/users/templates/registration/login.html
@@ -1,44 +1,31 @@
-<link href="\static\css\styles.css" rel="stylesheet" />
-    <div class="container py-5 h-100">
-      <div class="row d-flex justify-content-center align-items-center h-100">
-        <div class="col-12 col-md-8 col-lg-6 col-xl-5">
-          <div class="card bg-dark text-white" style="border-radius: 1rem;">
-            <div class="card-body p-5 text-center">
-  
-              {% comment %} Form start {% endcomment %}
-                {% if form.errors %}
-                <p>Your username and password didn't match. Please try again.</p>
-                {% endif %}
-
-            <form method="post" action="{% url 'login' %}">
-                {% csrf_token %}
-            <div class="mb-md-5 mt-md-4 pb-5">
-                
-                <h2 class="fw-bold mb-2 text-uppercase">Login</h2>
-                <p class="text-white-50 mb-5">Please enter your login and password!</p>
-                
-                <div class="form-outline form-white mb-4">
-                  <input type="text" name="username" id="id_username" class="form-control form-control-lg" />
-                  <label class="form-label" for="username">Username</label>
-                </div>
-  
-                <div class="form-outline form-white mb-4">
-                  <input type="password" name="password" id="id_password" class="form-control form-control-lg" />
-                  <label class="form-label" for="password">Password</label>
-                </div>
-  
-                <p class="small mb-5 pb-lg-2"><a class="text-white-50" href="#!">Forgot password?</a></p>
-  
-                <input class="btn btn-outline-light btn-lg px-5" type="submit" value="Login">
-            </div>
-            </form>
-              {% comment %} Form end {% endcomment %}
-  
-              <div>
-                <p class="mb-0">Don't have an account? <a data-toggle="modal" data-target=".signup-modal" class="text-white-50 fw-bold">Sign Up</a></p>
-              </div>
-            </div>
-          </div>
+<!-- Modal -->
+<div class="modal top fade" id="loginModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true" data-mdb-backdrop="true" data-mdb-keyboard="true">
+  <div class="modal-dialog  modal-dialog-centered">
+    <div class="modal-content" style="border-radius: 1rem;">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">LOGIN</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <form method="post" action="{% url 'login' %}">
+        {% csrf_token %}
+      <div class="modal-body row row-cols-auto g-3 align-items-center">
+        {% if form.errors %}
+        <p>Your username and password didn't match. Please try again.</p>
+        {% endif %}
+        <div class="form-floating col-12">
+          <input class="form-control" type="text" name="username" autofocus autocapitalize="none" autocomplete="username" maxlength="150" required id="id_username" placeholder="Username">
+          <label for="id_username">Username</label>
+        </div>
+        <div class="form-floating col-12">
+          <input type="password" name="password" class="form-control" autocomplete="current-password" required id="id_password" placeholder="Password">
+          <label for="id_password">Password</label>
         </div>
       </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <input class="btn btn-outline-dark btn-md px-5" type="submit" value="Login">
+      </div>
+    </form>
     </div>
+  </div>
+</div>
