--- a/users/templates/registration/register.html
+++ b/users/templates/registration/register.html
@@ -1,41 +1,37 @@
-<link href="\static\css\styles.css" rel="stylesheet" />
-
-    <div class="container py-5 h-100">
-      <div class="row d-flex justify-content-center align-items-center h-100">
-        <div class="col-12 col-md-8 col-lg-6 col-xl-5">
-          <div class="card bg-dark text-white" style="border-radius: 1rem;">
-            <div class="card-body p-5 text-center">
-
-            <form method="post" action="{% url 'register' %}">
-                {% csrf_token %}
-                <div class="mb-md-5 mt-md-4 pb-5">
-                
-                <h2 class="fw-bold mb-2 text-uppercase">Signup</h2>
-                <p class="text-white-50 mb-5">Please enter your login and password!</p>
-                
-                <div class="form-outline form-white mb-4">
-                  <input type="text" name="username" id="id_username" class="form-control form-control-lg" />
-                  <label class="form-label" for="username">Username</label>
-                </div>
-  
-                <div class="form-outline form-white mb-4">
-                  <input type="password" name="password1" id="id_password1" class="form-control form-control-lg" />
-                  <label class="form-label" for="id_password2">Password</label>
-                </div>
-
-                <div class="form-outline form-white mb-4">
-                    <input type="password" name="password2" id="id_password2" class="form-control form-control-lg" />
-                    <label class="form-label" for="id_password2">Confirm Password</label>
-                  </div>
-    
-                <input class="btn btn-outline-light btn-lg px-5" type="submit" value="Signup">
-                </div>
-            </form>
-            <div>
-                <p class="mb-0">Have an account? <a href="{% url 'login' %}" class="text-white-50 fw-bold">Login</a></p>
-            </div>
-            </div>
-          </div> 
-        </div>
+<!-- Modal -->
+<div class="modal top fade" id="signupModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true" data-mdb-backdrop="true" data-mdb-keyboard="true">
+  <div class="modal-dialog  modal-dialog-centered">
+    <div class="modal-content" style="border-radius: 1rem;">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">SIGNUP</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
+      
+        <form method="post" action="{% url 'register' %}">
+          {% csrf_token %}
+          <div class="modal-body row row-cols-auto g-3 align-items-center">
+            
+            <div class="form-floating col-12">
+              <input type="text" name="username" id="id_username" class="form-control" placeholder="Username"/>
+              <label for="username">Username</label>
+            </div>
+
+            <div class="form-floating col-12">
+              <input type="password" name="password1" id="id_password1" class="form-control" placeholder="Password" />
+              <label for="id_password2">Password</label>
+            </div>
+
+            <div class="form-floating col-12">
+                <input type="password" name="password2" id="id_password2" class="form-control" placeholder="Confirm Password" />
+                <label for="id_password2">Confirm Password</label>
+            </div>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            <input class="btn btn-outline-dark btn-md px-5" type="submit" value="Signup">
+          </div>
+        </form>
+
     </div>
+  </div>
+</div>
