--- a/locations/templates/locations/index.html
+++ b/locations/templates/locations/index.html
@@ -33,6 +33,18 @@
                     <li class="nav-item"><a class="nav-link" data-bs-toggle="modal" href=""
                             data-bs-target="#signupModal">Signup</a></li>
                     {% endif %}
+
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                          Filter by
+                        </a>
+                      
+                        <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                          <a class="dropdown-item" href="{% url 'placeList' placetype='H' %}">Hotel</a>
+                          <a class="dropdown-item" href="{% url 'placeList' placetype='R' %}">Restaurant</a>
+                          <a class="dropdown-item" href="{% url 'placeList' placetype='A' %}">Attraction</a>
+                        </div>
+                    </li>
                 </ul>
                 {% block counter %}
                 {% if request.user.is_authenticated %}
