--- a/locations/templates/locations/index.html
+++ b/locations/templates/locations/index.html
@@ -29,11 +29,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
                     <li class="nav-item"><a class="nav-link" href="{% url 'placeList' %}">Popular Sites</a></li>
-                    {% if not request.user.is_authenticated %}
-                    <li class="nav-item"><a class="nav-link" data-bs-toggle="modal" href=""
-                            data-bs-target="#signupModal">Signup</a></li>
-                    {% endif %}
-
+                    
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                           Filter by
@@ -45,6 +41,14 @@
                           <a class="dropdown-item" href="{% url 'placeList' placetype='A' %}">Attraction</a>
                         </div>
                     </li>
+
+                    {% if not request.user.is_authenticated %}
+                    <li class="nav-item"><a class="nav-link" data-bs-toggle="modal" href=""
+                            data-bs-target="#signupModal">Signup</a></li>
+                    {% else %}
+                    <li class="nav-item"><a class="nav-link" href="{% url 'logout' %}">Logout</a></li>
+                    {% endif %}
+
                 </ul>
                 {% block counter %}
                 {% if request.user.is_authenticated %}
